make sure image is fully visible

--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -33,6 +33,8 @@
   position: relative;
   transition: transform 0.3s ease;
   overflow: hidden;
+  display: flex;
+  align-items: stretch;
   @media (min-width: breakpoints.$desktop) {
     flex: 1 0 calc(25% - 2em);
   }
@@ -64,6 +66,7 @@
     transition: height 0.3s ease, opacity 0.3s ease;
   }
   &__image {
+    flex: 1;
     aspect-ratio: 1 / 1;
     height: auto;
   }
